--- a/SneakerInside/Views/Catalog/Create.cshtml
+++ b/SneakerInside/Views/Catalog/Create.cshtml
@@ -2,29 +2,24 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
 }
 
-<div class="col-md-6">
-    <div class="card card-success">
-        <div class="card-header">
-            <h3 class="card-title">Thêm mới @ViewBag.Name</h3>
-        </div>
+<div class="row">
+    <div class="col-md-12">
         <form asp-action="Create">
-            <div class="card-body">
-                <div class="form-group">
-                    <label asp-for="CatalogName" class="control-label"></label>
-                    <input asp-for="CatalogName" class="form-control" />
-                    <span asp-validation-for="CatalogName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Status" class="control-label"></label>
-                    <select asp-for="Status" class="form-control" asp-items="@ViewBag.status"></select>
-                    <span asp-validation-for="Status" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="CatalogName" class="control-label"></label>
+                <input asp-for="CatalogName" class="form-control" />
+                <span asp-validation-for="CatalogName" class="text-danger"></span>
             </div>
-            <div class="card-footer">
-                <input type="submit" value="Thêm mới" class="btn btn-success" />
+            <div class="form-group">
+                <label asp-for="Status" class="control-label"></label>
+                <select asp-for="Status" class="form-control" asp-items="@ViewBag.status"></select>
+                <span asp-validation-for="Status" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Thêm mới" class="btn btn-success btn-block"/>
             </div>
         </form>
     </div>
