--- a/SneakerInside/Views/Catalog/Index.cshtml
+++ b/SneakerInside/Views/Catalog/Index.cshtml
@@ -25,90 +25,112 @@
                         @Html.DisplayNameFor(model => model.Status)
                     </th>
                     <th style="text-align: center">
-                        <a asp-action="Create" class="btn btn-success"><i class="fas fa-plus"></i></a>
+                        <a onclick="createCatalog('@Url.Action("Create","Catalog")', 'Thêm mới @ViewBag.Name')" class="btn btn-success"><i class="fas fa-plus"></i></a>
                     </th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @item.CatalogID
-                        </td>
-                        <td>
-                            @item.CatalogName
-                        </td>
-                        <td>
-                            @if (item.Status == 1)
-                            {
-                                <p>Hoạt động</p>
-                            }
-                            else
-                            {
-                                <p>Không hoạt động</p>
-                            }
-                        </td>
-                        <td style="text-align: center">
-                            <a asp-action="Edit" asp-route-id="@item.CatalogID" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a asp-action="Delete" asp-route-id="@item.CatalogID" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
-                            @*<button type="button" class="btn btn-danger btn-sm btn_delete" data-toggle="modal" data-target="#deleteModal">
-                                <i class="fa fa-trash"></i>
-                            </button>*@
-                        </td>
-                    </tr>
-                }
-            </tbody>
+            @*<tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @item.CatalogID
+                            </td>
+                            <td>
+                                @item.CatalogName
+                            </td>
+                            <td>
+                                @if (item.Status == 1)
+                                {
+                                    <p>Hoạt động</p>
+                                }
+                                else
+                                {
+                                    <p>Không hoạt động</p>
+                                }
+                            </td>
+                            <td style="text-align: center">
+                                <a asp-action="Edit" asp-route-id="@item.CatalogID" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                                <a asp-action="Delete" asp-route-id="@item.CatalogID" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>*@
         </table>
     </div>
 </div>
 
-@section Scripts{ 
+<!-- Modal -->
+<div class="modal fade" id="formModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts{
     <script type="text/javascript">
-        //$(document).ready(function () {
-        //    $('#catalogTable').dataTable({
-
-        //    });
-        //});
-
-        @*$(document).ready(function () {
-            var data = [];
-            $.ajax({
-                url: '@Url.Action("GetAll", "Catalog")',
-                type: 'GET',
-                dataType: 'html',
-                success: function (response) {
-                    data = response;
-                }
-            });
-            console.log('11111');
-            console.log(data)
-            $('#catalogTable').dataTable({
-                data: data,
+        $(document).ready(function () {
+            $('#catalogTable').DataTable({
+                processing: true,
+                ajax: {
+                    url: '/Catalog/GetAll',
+                    dataSrc: ''
+                },
                 columns: [
-                    {
-                        data: 'catalogID' },
+                    { data: 'catalogID' },
                     { data: 'catalogName' },
-                    { data: 'status' },
                     {
-                        "render": function (data, row) {
-                            return "<a href='#' class='btn btn-danger' onclick=DeleteCustomer('" + row.id + "'); >Delete</a>";
+                        data: 'status',
+                        render: function (data) {
+                            return data ? "Hoạt động" : "Không hoạt động";
                         }
                     },
+                    {
+                        data: null,
+                        render: function (data, type, row) {
+                            return '<button id="' + row.catalogID +'" type="button" class="btn btn-danger getID" data-toggle="modal" data-target="#deleteModal"><i class="fas fa-trash-alt"></i></button>';
+                        }
+                    }
                 ]
             });
+
+            var id = 0;
+            $('#catalogTable').on('click', 'button.getID', function () {
+                var id = $(this).attr('id');
+            });
+
+
+            $('body').on('click','#href_delete',function () {
+                $.ajax({
+                    url: '/Catalog/Delete/' + id
+                });
+            });
+            debugger
         });
 
-        function getdata() {
+        createCatalog = (url, title) => {
             $.ajax({
-                url: '@Url.Action("GetAll", "Catalog")',
-                type: 'GET',
-                dataType: 'html',
-                success: function (response) {
-                    console.log(response);
-                    return data;
+                type: "GET",
+                url: url,
+                success: function (res) {
+                    $("#formModal .modal-body").html(res);
+                    $("#formModal .modal-title").html(title);
+                    $("#formModal").modal('show');
                 }
-            });
-        }*@
+            })
+        }
+
     </script>
 }
