--- a/SneakerInside/Views/Catalog/Index.cshtml
+++ b/SneakerInside/Views/Catalog/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="card card-info">
     <div class="card-header">
-        <h3 class="card-title">Danh sách @ViewBag.Name</h3>
+        <h3 class="card-title">Danh sách hãng giày</h3>
     </div>
     <div class="card-body">
         <table id="catalogTable" class="table table-bordered table-hover">
@@ -25,9 +25,10 @@
                         @Html.DisplayNameFor(model => model.Status)
                     </th>
                     <th style="text-align: center">
-                        <a onclick="showCatalogModal('@Url.Action("Create","Catalog",null,Context.Request.Scheme)', 'Thêm mới danh mục',)" class="btn btn-success">
+                        <button type="button" class="btn btn-success" onclick="createCatalog()"><i class="fas fa-plus"></i></button>
+                        @*<a onclick="showCatalogModal('@Url.Action("Create","Catalog",null,Context.Request.Scheme)', 'Thêm mới danh mục',)" class="btn btn-success">
                             <i class="fas fa-plus"></i>
-                        </a>
+                        </a>*@
                     </th>
                 </tr>
             </thead>
@@ -63,18 +64,10 @@
 </div>
 
 <!-- Modal -->
-<div class="modal" tabindex="-1" role="dialog" id="catalogModal">
+<div class="modal fade" tabindex="-1" role="dialog" id="catalogModal">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
+        <div class="modal-content" id="catalogModalBody">
 
-            </div>
         </div>
     </div>
 </div>
@@ -107,56 +100,56 @@
             });
         });
 
-        showCatalogModal = (url, title) => {
+        function createCatalog() {
             $.ajax({
                 type: "GET",
-                url: url,
+                url: "/Catalog/Create",
                 success: function (res) {
-                    $("#catalogModal .modal-body").html(res);
-                    $("#catalogModal .modal-title").html(title);
+                    $("#catalogModalBody").html(res);
                     $("#catalogModal").modal('show');
                 }
             })
         }
 
-        createCatalog = form => {
-            try {
-                $.ajax({
-                    type: "POST",
-                    url: form.action,
-                    data: new FormData(form),
-                    contentType: false,
-                    processData: false,
-                    success: function (res) {
-                        if (res.isValid) {
-                            $("#catalogModal .modal-body").html('');
-                            $("#catalogModal .modal-title").html('');
-                            $("#catalogModal").modal('hide');
-                        }
-                        else {
-                            $("#catalogModal .modal-body").html(res.html);
-                        }
-                    },
-                    error: function (err) {
-                        console.log(err);
-                    }
-                })
-            }
-            catch (e) {
-                console.log(e);
-            }
-            return false;
-        }
-
-        //function createCatalog() {
+        //showCatalogModal = (url, title) => {
         //    $.ajax({
         //        type: "GET",
-        //        url: "/Catalog/Create",
+        //        url: url,
         //        success: function (res) {
-        //            $("#catalogModalBody").html(res);
+        //            $("#catalogModal .modal-body").html(res);
+        //            $("#catalogModal .modal-title").html(title);
         //            $("#catalogModal").modal('show');
         //        }
         //    })
+        //}
+
+        //createCatalog = form => {
+        //    try {
+        //        $.ajax({
+        //            type: "POST",
+        //            url: form.action,
+        //            data: new FormData(form),
+        //            contentType: false,
+        //            processData: false,
+        //            success: function (res) {
+        //                if (res.isValid) {
+        //                    $("#catalogModal .modal-body").html('');
+        //                    $("#catalogModal .modal-title").html('');
+        //                    $("#catalogModal").modal('hide');
+        //                }
+        //                else {
+        //                    $("#catalogModal .modal-body").html(res.html);
+        //                }
+        //            },
+        //            error: function (err) {
+        //                console.log(err);
+        //            }
+        //        })
+        //    }
+        //    catch (e) {
+        //        console.log(e);
+        //    }
+        //    return false;
         //}
 
         //function create() {
